# P1

./: CMakeLists.txt  build.sh
log/: logger.cpp  logger.h  logger.hpp  logger_c_bridge.cpp  logger_c_bridge.h
src/: audio.c  audio.h  battle.c  battle.h  entities.h  game.c  main.c  name.c
src/entities/: enemies.c  enemyManager.c  enemyManager.h  entities.h
src/ui_map/: map.c  map.h  menu.c  menu.h  shop.c  shop.h  ui.c  ui.h
